Fix css overflow

--- a/client/src/app/scss/postbutton.scss
+++ b/client/src/app/scss/postbutton.scss
@@ -139,7 +139,6 @@
         }
     }
     .imgPlaceholder {
-        margin: 15px;
         position: relative;
         background-color: rgba(0, 0, 0, 0.6);
         border: 3px solid white;
